--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover">
-    <title>better-picker</title>
+    <title>vue-awesome-picker</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/better-picker.js"></script>
+    <script src="/dist/vue-awesome-picker.js"></script>
   </body>
 </html>
