--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dist/vue-awesome-picker.js"></script>
+    <script src="https://fyerl.github.io/vue-awesome-picker/dist/vue-awesome-picker.js"></script>
   </body>
 </html>
