--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover">
-    <link rel="icon" href="https://cn.vuejs.org/images/logo.png" type="image/png">
+    <link rel="icon" href="./static/img/vue-logo.png" type="image/png">
+    <link rel="manifest" href="manifest.json" />
     <title>vue-awesome-picker</title>
   </head>
   <body>
     <div id="app"></div>
+    <script>
+      navigator.serviceWorker && navigator.serviceWorker.register('sw.js').then((registration) => {
+        console.log('Registered events at scope: ', registration.scope);
+      });
+    </script>
     <script src="./dist/vue-awesome-picker.js"></script>
   </body>
 </html>
