--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <div id="app"></div>
     <script>
-      navigator.serviceWorker && navigator.serviceWorker.register('./sw.js').then((registration) => {
-        console.log('Registered events at scope: ', registration.scope);
+      navigator.serviceWorker && navigator.serviceWorker.register('./sw.js').then(() => {
+        console.log('service worker 注册成功')
+      }).catch((e) => {
+        console.log(`service worker 存在但注册失败：${e}`)
       });
     </script>
     <script src="./dist/vue-awesome-picker.js"></script>
